syntax = "proto3";

package upvote;

option go_package = "/upvote_pb;upvote_pb";

service UpvoteService {
  rpc GetResources(ResourceRequest) returns (ResourcesResponse) {}
  rpc GetVotes(Resource) returns (VoteCountResponse) {}
  rpc Vote(VotePayload) returns (VoteResponse) {}
}

message User {
  int32 id = 1;
  string name = 2;
  string lastName = 3;
}

message Resource{
  int32 resourceId = 1;
  int32 votesCount = 2;
  string type = 3;
  string content = 4;
  User author = 5;
}

message ResourcesResponse {
  repeated Resource resources = 1;
}

message ResourceRequest {
  string type = 1;
  int32 authorId = 2;
}

message VotePayload {
  int32 resourceId = 1;
  int32 userId = 2;
  int32 voteDir = 3;
}

message VoteResponse {
  bool valid = 1;
}

message VoteCountResponse {
  int32 resourceId = 1;
  int32 voteCount = 2;
}